objects/Assigned_Process__c.object
<CustomObject>
    <description>Junction Object between Device and Process to implement multiple PID assignment requirement.</description>
    <fields>
        <fullName>CRMDID__c</fullName>
        <formula>Device__r.CRMDID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRMDID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy_HCMLoginID__c</fullName>
        <formula>Device__r.CreatedBy_HCMLoginID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedBy HCMLoginID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <description>Primary Master</description>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Assigned Process</relationshipLabel>
        <relationshipName>Assigned_Process</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>GAP_Comment__c</fullName>
        <description>GAP related comments</description>
        <label>GAP Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MRS_Status__c</fullName>
        <label>MRS Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modifiedby_HCMLoginID__c</fullName>
        <formula>Device__r.Modifiedby_HCMLoginID__c</formula>
        <label>Modifiedby HCMLoginID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PID_Status__c</fullName>
        <formula>IF(Process__r.ATTRIBUTE_READINESS_CALCULATED__c = &apos;Suspended&apos;, 
    &apos;Suspended PID Assigned&apos;, 
     
        
        IF(OR(Process__r.Available_to_Sell__c = &apos;Registered/TBO&apos;,Process__r.Available_to_Sell__c = &apos;Available&apos;,Process__r.Available_to_Sell__c = &apos;MPW Ready&apos;,Process__r.Available_to_Sell__c = &apos;Prototype Ready&apos;) , 
          &apos;Available&apos;, 
          &apos;Unavailable&apos;
        )
      
  )</formula>
        <label>PID Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <formula>Process__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <description>Secondary Master</description>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Assigned Process</relationshipLabel>
        <relationshipName>Assigned_Process</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Siebel_Device_Id__c</fullName>
        <formula>Device__r.Siebel_Device_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Device Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Assigned Process</label>
    <nameField>
        <displayFormat>AP-{0000000}</displayFormat>
        <label>Assigned Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Process</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assigned_Process_Consistency_Check</fullName>
        <active>true</active>
        <description>Check geometry and process family of both Device and Process are same.</description>
        <errorConditionFormula>Device__r.Geometry__c != Process__r.Tech_Geometry__c</errorConditionFormula>
        <errorDisplayField>Process__c</errorDisplayField>
        <errorMessage>Geometry is not matching Device</errorMessage>
    </validationRules>
</CustomObject>